[project]
name = "infinity-sdk"
version = "0.6.11"
description = "infinity"
readme = "python/infinity_sdk/README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "sqlglot[rs]>=27.10.0",
    "pydantic>=2.9.0,<3.0.0",
    "thrift>=0.20.0,<1.0.0",
    "setuptools>=78.1.1,<81.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pyarrow>=17.0.0,<23.0.0",
    "polars-lts-cpu>=1.9.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "readerwriterlock>=1.0.0,<2.0.0",
    "datrie>=0.8.3,<0.9.0",
    "hanziconv>=0.3.0,<0.4.0",
    "nltk>=3.9.1,<4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<10.0.0",
    "tomli>=2.0.2,<3.0.0",
    "psutil>=6.0.0,<8.0.0",
    "docker>=7.1.0,<8.0.0",
    "tomli-w>=1.1.0,<2.0.0",
    "timeout-decorator>=0.5.0,<0.6.0",
]
benchmark = [
    "elasticsearch>=8.13.0,<10.0.0",
    "h5py>=3.11.0,<4.0.0",
    "qdrant_client>=1.9.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python/infinity_sdk"}

[tool.setuptools.packages.find]
where = ["python/infinity_sdk"]

[tool.setuptools.package-data]
infinity = ["huqie.txt", "huqie.txt.trie"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "L0",
    "L1",
    "L2",
    "L3",
    "complex",
    "slow",
    "nightly",
]

filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::ResourceWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    # "ignore::thrift.transport.TTransport",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.ruff.lint.per-file-ignores]
"python/infinity_embedded/local_infinity/client.py" = ["F403", "F405"]
"python/infinity_embedded/local_infinity/query_builder.py" = ["F403", "F405"]
"python/infinity_embedded/local_infinity/types.py" = ["F403", "F405"]
"python/infinity_sdk/infinity/remote_thrift/infinity_thrift_rpc/*" = ["F403", "F405", "E501"]
"src/embedded_infinity/__init__.py" = ["F403"]

